--- a/app/src/main/res/layout/activity_basic_transitions.xml
+++ b/app/src/main/res/layout/activity_basic_transitions.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="chuyun.com.transitions.basictransition.BasicTransitions"
-    android:orientation="vertical"
     >
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:text="开始动画"
-        android:id="@+id/begin"
-        />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/begin"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="默认动画" />
+
+        <Button
+            android:id="@+id/addtarget"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="AddTarget" />
+        <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text="delayTransition"-->
+        <!--android:id="@+id/delayTransition"-->
+        <!--/>-->
+
+    </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rootView"
         >
 
         <include layout="@layout/scene1"></include>
