--- a/app/src/main/res/layout/scene1.xml
+++ b/app/src/main/res/layout/scene1.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contianer"
     android:layout_width="match_parent"
     android:layout_height="400dp"
     >
-
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/image1"
-        android:layout_centerInParent="true"
         android:id="@+id/image1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/image1"
         />
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/image3"
         android:id="@+id/image3"
-        android:layout_below="@id/image1"
-        android:layout_alignParentLeft="true"
-        />
-
-
-    <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/image2"
-        android:id="@+id/image2"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/image1"
-        android:layout_alignParentRight="true"
+        android:src="@drawable/image3"
         />
 
-
-
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/image1"
+        android:src="@drawable/image2"
+        />
 </RelativeLayout>
