--- a/app/src/main/res/layout/scene2.xml
+++ b/app/src/main/res/layout/scene2.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contianer"
     android:layout_width="match_parent"
     android:layout_height="400dp"
     >
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/image3"
-        android:layout_centerInParent="true"
         android:id="@+id/image3"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/image3"
         />
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/image2"
         android:id="@+id/image2"
-        android:layout_below="@id/image3"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentLeft="true"
+        android:layout_below="@id/image3"
+        android:src="@drawable/image2"
         />
 
 
     <ImageView
+        android:id="@+id/image1"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/image1"
-        android:id="@+id/image1"
-        android:layout_below="@id/image3"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/image3"
         android:alpha="20"
+        android:src="@drawable/image1"
         />
 
 </RelativeLayout>
